# KiachaOs

./: BUILD_QUICK_REFERENCE.md  COGNITIVE_README.md  COGNITIVE_SYSTEM_SUMMARY.txt  COMPLETION_SUMMARY.txt  HARDWARE_DEPLOYMENT.md  KERNEL_BRAIN_TEST.md  Makefile  NATIVE_APPS_IMPLEMENTATION.md  QUICK_START.md  SESSION_COMPLETE_SUPREME_COGNITION.txt  SESSION_SUMMARY.txt  START.txt  SUPREME_COGNITION.md  SUPREME_IMPLEMENTATION_SUMMARY.txt
.github/workflows/: build-wasm.yml
frontend/wasm/: README.md  hello_kiacha.cpp
frontend/wasm/test/: validate_wasm_node.js
kiacha-apps/: README.md  package.json
kiacha-apps/control-center/components/: SystemSettings.tsx
kiacha-apps/explorer/components/: FileList.tsx
kiacha-apps/monitor/components/: ProcessList.tsx
kiacha-apps/network/components/: NetworkStatus.tsx
kiacha-apps/security/components/: AuditLogs.tsx
kiacha-apps/updates/components/: UpdateChecker.tsx
kiacha-apps/users/components/: UserList.tsx
kiacha-brain/: package-lock.json
kiacha-brain/src/: core-brain.ts  event-bus.ts  grpc-client.ts  index.ts
kiacha-brain/src/heartcore/: emotion_engine.ts  personality_pack.ts
kiacha-brain/src/routes/: apps.ts  supreme.ts
kiacha-brain/src/supreme_cognition/: core_engine.ts  fusion_engine.ts
kiacha-brain/src/types/: emotions.ts  (+1 more)
kiacha-kernel/: Cargo.toml  build.rs
kiacha-kernel/src/: event_bus.rs  grpc_server.rs  kernel.rs  main.rs  network_info.rs  proto.rs  system_info.rs  user_manager.rs
scripts/: build-all.sh  build-wasm.sh  build.sh  flash-usb.sh  run-qemu.sh  setup-dev.sh
shared/proto/: kiacha.proto
(+6 files in other folders)
