[package]
name = "kiacha-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
tonic = "0.11"
tonic-build = "0.11"
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
parking_lot = "0.12"
dashmap = "5.5"
thiserror = "1.0"
anyhow = "1.0"
wasmtime = "17.0"
wasmtime-wasi = "17.0"
libc = "0.2"
nix = { version = "0.27", features = ["process", "signal"] }
chrono = "0.4"
sysinfo = "0.30"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "kiacha-kernel"
path = "src/main.rs"

[build-script]
build = "build.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
